[JAVA17] Fase 4 - compilar a bytecode 17 y retirar java.security.policy inerte
- maven.compiler.source/target 1.8 -> maven.compiler.release 17
  (bytecode clase 61 verificado)
- Retirado -Djava.security.policy=security/dio.policy de los run.sh de
  demos y del entrypoint de mqtt-docker: nunca se instala un
  SecurityManager (la propiedad era inerte) y el fichero dio.policy no
  existe en ningun ensamblado; SecurityManager deprecado para
  eliminacion (JEP 411)

Validado: suite completa en verde con release 17 y demo rules arrancada
sobre Felix 7.0.5 + JDK 17 sin excepciones de acceso a modulos.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>